--- a/index.html
+++ b/index.html
@@ -1,39 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Interactive Quiz with Leaderboard</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Mnemonics Quiz</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-light">
-  <div class="container py-5">
-    <div id="quizContainer" class="card shadow-sm">
-      <div class="card-body">
-        <h4 id="question" class="card-title"></h4>
-        <div id="options"></div>
-        <button id="nextBtn" class="btn btn-primary mt-3">Next</button>
-      </div>
+<body>
+<div class="container py-5">
+    <!-- Start Screen -->
+    <div id="start-screen" class="card text-center shadow quiz-card">
+        <div class="card-body">
+            <h3 class="card-title">Can You Remember These Mnemonics? Quiz</h3>
+            <button id="start-btn" class="btn btn-primary btn-lg">Start</button>
+            <p class="mt-2">14 Questions | Timer Bonus ⏰</p>
+        </div>
     </div>
 
-    <div id="resultContainer" class="card shadow-sm d-none mt-4">
-      <div class="card-body">
-        <h4>Quiz Completed!</h4>
-        <p id="finalScore" class="lead"></p>
-        <input type="text" id="playerName" class="form-control mt-3" placeholder="Enter your name">
-        <button id="submitScore" class="btn btn-success w-100 mt-3">Submit Score</button>
-      </div>
+    <!-- Quiz Screen -->
+    <div id="quiz-screen" class="card shadow quiz-card d-none">
+        <div class="card-body">
+            <div class="d-flex justify-content-between">
+                <span id="timer" class="badge bg-success">30</span>
+                <span id="question-number">Question 1/14</span>
+                <span id="score">Score: 0</span>
+            </div>
+            <h5 id="question" class="mt-4"></h5>
+            <div id="answer-buttons" class="mt-4"></div>
+            <button id="next-btn" class="btn btn-primary mt-3 d-none">Next ➡️</button>
+        </div>
     </div>
 
-    <div class="card shadow-sm mt-4">
-      <div class="card-body">
-        <h4>Weekly Leaderboard</h4>
-        <ul id="leaderboard" class="list-group mt-2"></ul>
-      </div>
+    <!-- Result Screen -->
+    <div id="result-screen" class="card shadow quiz-card d-none">
+        <div class="card-body text-center">
+            <h4>🎉 Congrats!</h4>
+            <h2 id="final-score"></h2>
+            <button class="btn btn-primary" onclick="location.reload()">Play Again 🔄</button>
+            <hr>
+            <h5>🏆 Leaderboard (Last Week)</h5>
+            <ol id="leaderboard" class="list-group list-group-numbered mt-3"></ol>
+        </div>
     </div>
-  </div>
+</div>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
